# AI-Video-Boilerplate-Simple

./: .replit  README.md  main.py  pyproject.toml
XXXXX/: __init__.py  views.py
XXXXX/static/: styles.css
body/: __init__.py  views.py
body/static/: script.js  styles.css
face/: __init__.py  views.py
face/static/: script.js  styles.css
gaze/: __init__.py  views.py
gaze/static/: script.js  styles.css
glowsword/: __init__.py  views.py
glowsword/static/: script.js  styles.css
hands/: __init__.py  views.py
hands/static/: script.js  styles.css
homepage/: __init__.py  views.py
horror/: __init__.py  views.py
horror/static/: script.js
lightsaber/: __init__.py  views.py
lightsaber/static/: script.js  styles.css
microsoftobjectdetection/: __init__.py  views.py
microsoftobjectdetection/static/: script.js  styles.css
movement/: __init__.py  views.py
movement/static/: script.js  styles.css
pong/: __init__.py  views.py
pong/static/: script.js  styles.css
privasee/: __init__.py  views.py
privasee/static/: script.js
punchspeed/: __init__.py  views.py
punchspeed/static/: guage.js  script.js  styles.css
pushupcount/: __init__.py  views.py
pushupcount/static/: script.js  styles.css
puzzle/: __init__.py  views.py
puzzle/static/: script.js  styles.css
speed/: __init__.py  views.py
speed/static/: script.js  styles.css
static/: script.js  styles.css
surfinterneteyes/: __init__.py  views.py
template/: __init__.py  views.py
universeobjectdetection/: __init__.py  views.py
whiteboard/: __init__.py  views.py
(+29 files in other folders)
