[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0"
numpy = "^1.22.2"
Flask = "^2.2.0"
urllib3 = "^1.26.12"
python-dotenv = "^1.0.1"
gunicorn = "^22.0.0"
openai = "^1.42.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"